--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,4 @@
 {
-  "hello": "Hello",
   "intro_title": "Full-stack Web & Game Developer",
   "intro_desc_1": "“If you do what is Easy, Life will be Hard",
   "intro_desc_2": "But, If you do what is Hard, Life will be Easy.”",
@@ -20,5 +19,14 @@
   "vic_inhouse_desc_2": "Manage meeting room",
   "vic_inhouse_desc_3": "Kakowork bot",
   "vic_desc": "Nestjs, Nextjs Full stack development",
-  "vic_desc_2": "Multilingual support"
+  "vic_desc_2": "Multilingual support",
+  "school_name": "The Academic Credit Bank System",
+  "school_degree": "Computer Science bachelor's degree",
+  "academy_name": "Training Web Developers Based on Micro-Service",
+  "academy_desc": "Korea government job support program",
+  "treenod_job": "Back Office / Game Server",
+  "treenod_loca": "Hae-un-dae, Busan",
+  "treenod_gameserver": "Game Server",
+  "treenod_game_desc_1": "Golang Web-based Game contents development",
+  "treenod_game_desc_2": "Using the Gin framework"
 }
